[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agentgauge"]

[tool.setuptools.package-data]
agentgauge = ["py.typed"]

[project]
name = "agentgauge"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.0"]
langchain = ["langchain-core>=0.1"]
all = ["anthropic>=0.39", "openai>=1.0", "langchain-core>=0.1", "langchain-openai>=0.1", "langgraph>=0.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "python-dotenv",
    "anthropic>=0.39",
    "openai>=1.0",
    "langchain-core>=0.1",
    "langchain-openai>=0.1",
    "langgraph>=0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
